<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"

        android:indeterminateDrawable="@drawable/progbar"
        android:indeterminateDuration="@android:integer/config_mediumAnimTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_TextView" />

    <ImageView
        android:id="@+id/EZ_symbol"
        android:layout_width="140dp"
        android:layout_height="129dp"
        android:background="@drawable/ez_symbol"
        app:layout_constraintBottom_toTopOf="@id/login_TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.19999999" />

    <TextView
        android:id="@+id/title_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_black"
        android:text="MEAL PREP"
        android:textColor="#000000"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/EZ_symbol" />

    <TextView
        android:id="@+id/login_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:theme="@style/TitleText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003" />

    <EditText
        android:id="@+id/username_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="12"
        android:hint="Enter Username"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:theme="@style/FillInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_TextView" />

    <EditText
        android:id="@+id/password_EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:hint="Enter password"
        android:inputType="textPassword"
        android:theme="@style/FillInfo"
        app:layout_constraintStart_toStartOf="@id/username_EditText"
        app:layout_constraintTop_toBottomOf="@+id/username_EditText" />

    <Button
        android:id="@+id/newAccount_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Create a New Account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:theme="@style/NormalButtonBrown"
        app:layout_constraintBottom_toTopOf="@id/forgot_password"
        app:layout_constraintEnd_toEndOf="@id/password_EditText"
        app:layout_constraintStart_toStartOf="@id/password_EditText"
        app:layout_constraintTop_toBottomOf="@id/loginB_Button"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/loginB_Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Login"
        android:theme="@style/NormalButtonBrown"
        app:layout_constraintEnd_toEndOf="@id/password_EditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/password_EditText"
        app:layout_constraintTop_toBottomOf="@id/password_EditText" />

    <TextView
        android:theme="@style/BodyText"
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:paddingTop="0dp"
        android:text="Forgot Password"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>